--- a/index.html
+++ b/index.html
@@ -120,11 +120,34 @@
                     </svg>
                 </div>
             </section>
+            <section class="service">
+                <div class="service__container">
+                    <div class="service__img">
+                        <img src="img/service/phone.png" alt="phone">
+                    </div>
+                    <div class="service__content">
+                        <h3 class="service__suptitle suptitle">SERVICES WE PROVIDES</h3>
+                        <h2 class="service__title title">Build on both: Google web stories and AMP website format</h2>
+                        <div class="service__counter">
+                            <div class="service__num service__num_1">
+                                <div data-digits-counter>5660</div>
+                                <div class="service__num_text">Product sale per day working and sales</div>
+                            </div>
+                            <div class="service__num service__num_2">
+                                <div class="service__num_num" data-digits-counter>4</div>
+                                <span>M+</span>
+                                <div class="service__num_text">Downloaded saled in your good.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">footer</footer>
     </div>
     <script src="js/script.js"></script>
     <script src="js/parallax-mouse.js"></script>
+    <script src="js/counter.js"></script>
 </body>
 
 </html>
