added block and new js

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section data-prlx-mouse-wrapper class="about">
                 <div class="about__container">
                     <div class="about__body">
-                        <h3 class="about__suptitle suptitle">
+                        <h3 class="about__suptitle suptitle" id="text-printing">
                             100% SATISFIED GUARANTEE
                         </h3>
                         <h1 class="about__title">Power up your shopify products</h1>
@@ -126,7 +126,7 @@
                         <img src="img/service/phone.png" alt="phone">
                     </div>
                     <div class="service__content">
-                        <h3 class="service__suptitle suptitle">SERVICES WE PROVIDES</h3>
+                        <h3 class="service__suptitle suptitle" id="text-printing">SERVICES WE PROVIDES</h3>
                         <h2 class="service__title title">Build on both: Google web stories and AMP website format</h2>
                         <div class="service__counter">
                             <div class="service__num service__num_1">
@@ -139,6 +139,46 @@
                                 <div class="service__num_text">Downloaded saled in your good.</div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="do">
+                <div class="do__container">
+                    <div class="do__content">
+                        <h3 class="do__suptitle suptitle" id="text-printing">WHAT WE DO</h3>
+                        <h2 class="do__title title">Our creative process for your business</h2>
+                        <div class="do__text">As our motto, we always provide the best service especially for you and
+                            your company by growing your company to be better.</div>
+                    </div>
+                    <div class="do__cards">
+                        <a href="" class="do__card do__card_1">
+                            <div class="do__img">
+                                <img src="img/do/Grow.svg" alt="grow">
+                            </div>
+                            <h4 class="do__label">Grow your traffic</h4>
+                            <div class="do__sublabel">We always help your company to grow with us.</div>
+                        </a>
+                        <a href="" class="do__card do__card_2">
+                            <div class="do__img">
+                                <img src="img/do/ales.svg" alt="ales">
+                            </div>
+                            <h4 class="do__label">Content for sales</h4>
+                            <div class="do__sublabel">Every company that we handel. We always content more sales.</div>
+                        </a>
+                        <a href="" class="do__card do__card_3">
+                            <div class="do__img">
+                                <img src="img/do/Report.svg" alt="Report">
+                            </div>
+                            <h4 class="do__label">Reporting & analytics</h4>
+                            <div class="do__sublabel">Lorem ipsum dolor sit amet, consectetur adipiscing</div>
+                        </a>
+                        <a href="" class="do__card do__card_4">
+                            <div class="do__img">
+                                <img src="img/do/Conversion.svg" alt="Conversion">
+                            </div>
+                            <h4 class="do__label">Better Conversion</h4>
+                            <div class="do__sublabel">We always help your company to grow with us.</div>
+                        </a>
                     </div>
                 </div>
             </section>
