--- a/index.html
+++ b/index.html
@@ -182,12 +182,54 @@
                     </div>
                 </div>
             </section>
+            <section class="product">
+                <div class="product__container">
+                    <div class="product__img">
+                        <img src="img/product/sofa.png" alt="sofa">
+                        <div class="product__absolute absolute-product">
+                            <div data-digits-counter class="absolute-product__num">28</div>
+                            <div class="absolute-product__text">Total sales</div>
+                            <div class="circle">
+                                <div class="circle__item">
+                                    <div class="circle__half circle__half--clipped"></div>
+                                </div>
+                                <div class="circle__half circle__half--fix">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product__content">
+                        <h3 class="product__suptitle suptitle" id="text-printing">OUR PRODUCT STORIES</h3>
+                        <h2 class="product__title title">Why product stories? Learn more</h2>
+                        <div class="product__spollers">
+                            <div class="product__item" data-spollers>
+                                <h4 data-spoller class="product__label">SEO optimized, high Google work</h4>
+                                <div class="product__text">Lorem Ipsum is simply dummy text of the printing
+                                    and
+                                    typesetting
+                                    industry.</div>
+                            </div>
+                            <div class="product__item" data-spollers>
+                                <h4 data-spoller class="product__label">Fast loading, low bounce rates</h4>
+                                <div class="product__text">It is a long established fact that a reader will be
+                                    distracted by the readable content</div>
+                            </div>
+                            <div class="product__item" data-spollers>
+                                <h4 data-spoller class="product__label">SEO optimized, high Google work</h4>
+                                <div class="product__text">Lorem Ipsum is simply dummy text of the printing and
+                                    typesetting industry.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">footer</footer>
     </div>
     <script src="js/script.js"></script>
     <script src="js/parallax-mouse.js"></script>
     <script src="js/counter.js"></script>
+    <script src="js/accordeon.js"></script>
 </body>
 
 </html>
