all blocks done

--- a/index.html
+++ b/index.html
@@ -223,8 +223,111 @@
                     </div>
                 </div>
             </section>
+            <section class="process">
+                <div class="process__container">
+                    <div class="process__content">
+                        <h3 class="process__suptitle suptitle" id="text-printing">CREATIVE PROCESS</h3>
+                        <h2 class="process__title title">Know your ads inside & out-perform</h2>
+                        <div class="process__text">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                            an unknown printer took a galley of type and scrambled it to make a type specimen book. It
+                            has survived not only five centuries,</div>
+                    </div>
+                    <div class="process__image">
+                        <img src="img/process/man.png" alt="main man">
+                        <div class="process__absolute absolute-process">
+                            <h4 class="absolute-process__title">Satisfied Clients</h4>
+                            <div class="absolute-process__items">
+                                <div class="absolute-process__item">
+                                    <img src="img/process/1.png" alt="1">
+                                </div>
+                                <div class="absolute-process__item">
+                                    <img src="img/process/2.png" alt="2">
+                                </div>
+                                <div class="absolute-process__item">
+                                    <img src="img/process/3.png" alt="3">
+                                </div>
+                                <div class="absolute-process__item">
+                                    <img src="img/process/4.png" alt="4">
+                                </div>
+                                <div class="absolute-process__item">
+                                    <div class="absolute-process__text">5k+</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="contact">
+                <div class="contact__container">
+                    <h2 class="contact__title title">Contact with us.</h2>
+                    <div class="contact__text">More than 50,000+ companies trusted our business</div>
+                    <form action="#" class="contact__form" id="form2">
+                        <input required form="form2" type="text" class="contact__input"
+                            placeholder="Type your messages..">
+                        <button form="form2" type="submit" class="contact__button button">Get Started</button>
+                    </form>
+                </div>
+            </section>
         </main>
-        <footer class="footer">footer</footer>
+        <footer class="footer">
+            <div class="footer__container">
+                <a href="" class="footer__logo">
+                    <img src="img/shopiy.svg" alt="shopiy">
+                </a>
+                <div class="footer__menu menu2">
+                    <nav class="menu2__body">
+                        <ul class="menu2__list">
+                            <li class="menu2__item"><a data-goto=".about" href="#" class="menu2__link">About</a></li>
+                            <li class="menu2__item"><a data-goto=".product" href="#" class="menu2__link">Product</a>
+                            </li>
+                            <li class="menu2__item"><a data-goto=".service" href="#" class="menu2__link">Service</a>
+                            </li>
+                            <li class="menu2__item"><a data-goto=".contact" href="#" class="menu2__link">Contact</a>
+                            </li>
+                            <li class="menu2__item menu2__links">
+                                <a href="#" class="menu2__link">
+                                    <svg width="11" height="21" viewBox="0 0 11 21" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M10.3916 10.2199H7.49067V20.4551H3.53282V10.2199H0.879883V6.69699L3.53282 6.68657L3.52204 4.62285C3.52204 1.74615 4.33086 -0.00488281 7.84655 -0.00488281H10.7691V3.51803H8.93576C7.57694 3.51803 7.50145 4.01833 7.50145 4.93554V6.69699H10.7799L10.3916 10.2199Z"
+                                            fill="#868695" />
+                                    </svg>
+                                </a>
+                                <a href="#" class="menu2__link">
+                                    <svg width="23" height="19" viewBox="0 0 23 19" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M19.8576 4.75767L19.8687 5.33617C19.8687 11.277 15.3569 18.1412 7.10931 18.1412C4.58183 18.1412 2.22062 17.3958 0.236328 16.1053C0.579977 16.1498 0.934711 16.172 1.30053 16.172C3.40677 16.172 5.33564 15.4489 6.86543 14.2363C4.9033 14.2029 3.25157 12.9013 2.67512 11.1101C2.95226 11.1657 3.2294 11.188 3.51762 11.188C3.92778 11.188 4.32686 11.1324 4.69268 11.0322C2.64187 10.6206 1.10099 8.80721 1.10099 6.62669V6.58219C1.69961 6.91594 2.3869 7.11619 3.12963 7.13845C1.9324 6.33744 1.14534 4.94679 1.14534 3.4004C1.14534 2.57714 1.36704 1.79838 1.75503 1.13088C3.94995 3.85653 7.26451 5.63655 10.9892 5.82568C10.9116 5.50305 10.8784 5.15817 10.8784 4.80217C10.8784 2.32127 12.8737 0.307617 15.3569 0.307617C16.6428 0.307617 17.8179 0.852748 18.6382 1.72051C19.647 1.52026 20.6114 1.15313 21.4871 0.641371C21.1546 1.68713 20.4451 2.57714 19.5139 3.1334C20.4229 3.02215 21.2876 2.7774 22.0968 2.42139C21.4871 3.32253 20.7223 4.12354 19.8576 4.75767Z"
+                                            fill="#868695" />
+                                    </svg>
+                                </a>
+                                <a href="#" class="menu2__link">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M18.6817 -0.00488281H2.98423C1.48873 -0.00488281 0.272949 1.1033 0.272949 2.7064V18.4038C0.272949 20.0069 1.48873 21.1151 2.98423 21.1151H18.6817C20.1772 21.1151 21.393 20.0069 21.393 18.4038V2.7064C21.393 1.1033 20.1772 -0.00488281 18.6817 -0.00488281ZM14.7116 3.29814C14.7116 2.77095 15.1419 2.35135 15.6584 2.35135H18.0469C18.5741 2.35135 18.9937 2.78171 18.9937 3.29814V5.57906C18.9937 6.10625 18.5633 6.52586 18.0469 6.52586H15.6584C15.1312 6.52586 14.7116 6.0955 14.7116 5.57906V3.29814ZM10.8598 6.40751C13.2053 6.40751 15.0989 8.2473 15.0989 10.5175C15.0989 12.7876 13.1946 14.6274 10.8598 14.6274C8.51437 14.6274 6.62078 12.7876 6.62078 10.5175C6.62078 8.2473 8.51437 6.40751 10.8598 6.40751ZM19.0044 17.8551C19.0044 18.3178 18.6279 18.6943 18.1652 18.6943H3.45762C2.99499 18.6943 2.61842 18.3178 2.61842 17.8551V8.92512H4.55504C4.3829 9.49535 4.28607 10.1086 4.28607 10.7326C4.28607 14.2509 7.22329 17.0912 10.8491 17.0912C14.4749 17.0912 17.4121 14.2401 17.4121 10.7326C17.4121 10.1086 17.3153 9.49535 17.1431 8.92512H19.0044V17.8551V17.8551Z"
+                                            fill="#868695" />
+                                    </svg>
+                                </a>
+                                <a href="#" class="menu2__link">
+                                    <svg width="22" height="21" viewBox="0 0 22 21" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M21.8639 20.9307L21.8746 13.2551C21.8746 9.49699 21.0677 6.60938 16.6726 6.60938C14.56 6.60938 13.148 7.76654 12.5641 8.87063H12.5004V6.94909H8.33887V20.92H12.6703V14.0089C12.6703 12.1829 13.0206 10.4206 15.2713 10.4206C17.4901 10.4206 17.5325 12.5014 17.5325 14.1257V20.9307H21.8639Z"
+                                            fill="#868695" />
+                                        <path d="M5.63207 6.94922H1.29004V20.9202H5.63207V6.94922Z" fill="#868695" />
+                                        <path
+                                            d="M3.45549 -0.00488281C2.06477 -0.00488281 0.939453 1.12044 0.939453 2.51116C0.939453 3.90189 2.06477 5.04844 3.45549 5.04844C4.84622 5.04844 5.97154 3.90189 5.97154 2.51116C5.97154 1.12044 4.84622 -0.00488281 3.45549 -0.00488281Z"
+                                            fill="#868695" />
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </footer>
     </div>
     <script src="js/script.js"></script>
     <script src="js/parallax-mouse.js"></script>
